// Copyright (c) 2023 - Restate Software, Inc., Restate GmbH
//
// This file is part of the Restate Java SDK,
// which is released under the MIT license.
//
// You can find a copy of the license in file LICENSE in the root
// directory of this repository or package, or at
// https://github.com/restatedev/sdk-java/blob/main/LICENSE
syntax = "proto3";

package counter;

import "google/protobuf/empty.proto";
import "dev/restate/ext.proto";

option java_multiple_files = true;
option java_package = "dev.restate.sdk.examples.generated";
option java_outer_classname = "CounterProto";

service Counter {
  option (dev.restate.ext.service_type) = KEYED;

  rpc Reset (CounterRequest) returns (google.protobuf.Empty);
  rpc Add (CounterAddRequest) returns (google.protobuf.Empty);
  rpc Get (CounterRequest) returns (GetResponse);
  rpc GetAndAdd (CounterAddRequest) returns (CounterUpdateResult);
}

message CounterRequest {
  string counter_name = 1 [(dev.restate.ext.field) = KEY];
}

message CounterAddRequest {
  string counter_name = 1 [(dev.restate.ext.field) = KEY];
  int64 value = 2;
}

message GetResponse {
  int64 value = 1;
}

message CounterUpdateResult {
  int64 old_value = 1;
  int64 new_value = 2;
}